--- a/src/navbar.css
+++ b/src/navbar.css
@@ -10,6 +10,7 @@
     top: 0;
      z-index: 100;
      position: static;  
+     border-radius: 10px;
 }
 
 .logo {
